fixed collapsed content gradient

--- a/spacious_mastodon.user.css
+++ b/spacious_mastodon.user.css
@@ -783,6 +783,9 @@ on/off switch instead of 0 width because stylus likes to replace 0 with the defa
 			.status__prepend{
 				display:none;
 			}
+			.status__content::after when(@fixtheme = 1){
+				background:linear-gradient(transparent,@default-bg1);
+			}
 		}
 	}
 	.status when(@sibar=1){
